--- a/index.html
+++ b/index.html
@@ -1004,7 +1004,7 @@
             </div>
             <div class="app-card">
                 <div class="app-icon">
-                    <img src="Vol4.jpg" alt="App Logo" style="width:60px; height:60px;">
+                    <img src="Vol4.png" alt="App Logo" style="width:60px; height:60px;">
                 </div>
                 <h3>Volume-04</h3>
                 <p>Stay connected with accurate prayer times and Islamic calendar</p>
@@ -1015,7 +1015,7 @@
             </div>
             <div class="app-card">
                 <div class="app-icon">
-                    <img src="Vol3.jpg" alt="App Logo" style="width:60px; height:60px;">
+                    <img src="Vol3.png" alt="App Logo" style="width:60px; height:60px;">
                 </div>
                 <h3>Volume-03</h3>
                 <p>Access a collection of inspiring Islamic quotes and teachings</p>
