--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+[⚠️ Suspicious Content] <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -76,6 +76,7 @@
             display: flex;
             align-items: center;
             gap: 0.5rem;
+            font-weight: 700;
         }
 
         .logo i {
@@ -86,6 +87,8 @@
             display: flex;
             gap: 2rem;
             list-style: none;
+            margin: 0;
+            padding: 0;
         }
 
         .nav-links a {
@@ -94,6 +97,7 @@
             font-weight: 500;
             transition: color 0.3s ease;
             position: relative;
+            font-family: 'Poppins', sans-serif;
         }
 
         .nav-links a::after {
@@ -109,6 +113,24 @@
 
         .nav-links a:hover::after {
             width: 100%;
+        }
+
+        /* Section Titles - Make them consistent */
+        .section-title h2 {
+            font-family: 'Amiri', serif;
+            font-size: 2.5rem;
+            color: var(--primary-color);
+            margin-bottom: 1rem;
+            font-weight: 700;
+            text-align: center;
+        }
+
+        .section-title p {
+            font-family: 'Poppins', sans-serif;
+            color: #666;
+            max-width: 600px;
+            margin: 0 auto;
+            text-align: center;
         }
 
         /* Hero Section */
@@ -204,24 +226,6 @@
         .apps-section {
             padding: 6rem 2rem;
             background: var(--light-bg);
-        }
-
-        .section-title {
-            text-align: center;
-            margin-bottom: 4rem;
-        }
-
-        .section-title h2 {
-            font-family: 'Amiri', serif;
-            font-size: 2.5rem;
-            color: var(--primary-color);
-            margin-bottom: 1rem;
-        }
-
-        .section-title p {
-            color: #666;
-            max-width: 600px;
-            margin: 0 auto;
         }
 
         .apps-grid {
@@ -906,7 +910,7 @@
             border-color: var(--success-color);
         }
 
-        /* Add mobile menu */
+        /* Mobile Menu Styles */
         .mobile-menu-btn {
             display: none;
             background: none;
@@ -914,6 +918,8 @@
             color: var(--primary-color);
             font-size: 1.5rem;
             cursor: pointer;
+            padding: 0.5rem;
+            z-index: 1001;
         }
 
         @media (max-width: 768px) {
@@ -922,26 +928,68 @@
             }
 
             .nav-links {
+                display: none;
                 position: fixed;
-                top: 70px;
-                left: 0;
-                width: 100%;
+                top: 0;
+                right: 0;
+                width: 80%;
+                max-width: 300px;
+                height: 100vh;
                 background: var(--header-bg);
-                padding: 1rem;
+                padding: 5rem 2rem 2rem;
                 flex-direction: column;
-                align-items: center;
-                transform: translateY(-100%);
-                transition: transform 0.3s ease;
-                box-shadow: 0 4px 15px rgba(3, 35, 98, 0.1);
+                align-items: flex-start;
+                box-shadow: -2px 0 10px rgba(0, 0, 0, 0.1);
+                z-index: 1000;
             }
 
             .nav-links.active {
-                transform: translateY(0);
+                display: flex;
             }
 
             .nav-links li {
                 margin: 1rem 0;
+                width: 100%;
             }
+
+            .nav-links a {
+                display: block;
+                padding: 1rem 0;
+                font-size: 1.2rem;
+                font-weight: 500;
+                color: var(--primary-color);
+                border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+                width: 100%;
+            }
+
+            .nav-links a:hover {
+                color: var(--accent-color);
+            }
+
+            .logo {
+                font-size: 1.5rem;
+            }
+
+            .logo img {
+                width: 35px;
+                height: 35px;
+            }
+        }
+
+        /* Add overlay when mobile menu is active */
+        .menu-overlay {
+            display: none;
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: rgba(0, 0, 0, 0.5);
+            z-index: 999;
+        }
+
+        .menu-overlay.active {
+            display: block;
         }
 
         /* Add dark mode toggle */
@@ -1069,7 +1117,7 @@
     <header class="header">
         <nav class="nav-container">
             <a href="#" class="logo">
-                <img src="logo5.png">
+                <img src="logo5.png" alt="Hikmat Ki Batein Logo">
                 Hikmat Ki Batein
             </a>
             <button class="mobile-menu-btn" aria-label="Toggle menu">
@@ -1084,6 +1132,7 @@
             </ul>
         </nav>
     </header>
+    <div class="menu-overlay"></div>
 
     <!-- Hero Section -->
     <section class="hero">
@@ -1373,9 +1422,56 @@
         // Mobile menu
         const mobileMenuBtn = document.querySelector('.mobile-menu-btn');
         const navLinks = document.querySelector('.nav-links');
+        const menuOverlay = document.querySelector('.menu-overlay');
+        const body = document.body;
 
-        mobileMenuBtn.addEventListener('click', function() {
+        function toggleMenu() {
             navLinks.classList.toggle('active');
+            menuOverlay.classList.toggle('active');
+            body.style.overflow = navLinks.classList.contains('active') ? 'hidden' : '';
+            
+            // Toggle menu icon
+            const icon = mobileMenuBtn.querySelector('i');
+            if (navLinks.classList.contains('active')) {
+                icon.classList.remove('fa-bars');
+                icon.classList.add('fa-times');
+            } else {
+                icon.classList.remove('fa-times');
+                icon.classList.add('fa-bars');
+            }
+        }
+
+        // Ensure menu is closed on page load
+        navLinks.classList.remove('active');
+        menuOverlay.classList.remove('active');
+        body.style.overflow = '';
+
+        // Add click event listener to mobile menu button
+        mobileMenuBtn.addEventListener('click', function(e) {
+            e.preventDefault();
+            toggleMenu();
+        });
+
+        // Add click event listener to overlay
+        menuOverlay.addEventListener('click', function(e) {
+            e.preventDefault();
+            toggleMenu();
+        });
+
+        // Close menu when clicking on a link
+        document.querySelectorAll('.nav-links a').forEach(link => {
+            link.addEventListener('click', function(e) {
+                if (navLinks.classList.contains('active')) {
+                    toggleMenu();
+                }
+            });
+        });
+
+        // Close menu on window resize
+        window.addEventListener('resize', function() {
+            if (window.innerWidth > 768 && navLinks.classList.contains('active')) {
+                toggleMenu();
+            }
         });
 
         // Section reveal animations
