--- a/index.html
+++ b/index.html
@@ -1168,7 +1168,7 @@
                     <img src="logo5.png" alt="App Logo" style="width:60px; height:60px;">
                 </div>
                 <h3>Volume-05</h3>
-                <p>Get daily doses of Islamic wisdom and guidance from Hikmat Ki Batein</p>
+                <p>Get it now!</p>
                 <a href="https://play.google.com/store/apps/details?id=com.project.hkb02&pcampaignid=web_share" class="download-btn">
                     <i class="fab fa-google-play"></i>
                     Download
@@ -1179,7 +1179,7 @@
                     <img src="volume4.png" alt="App Logo" style="width:60px; height:60px;">
                 </div>
                 <h3>Volume-04</h3>
-                <p>Stay connected with accurate prayer times and Islamic calendar</p>
+                <p>Get it now!</p>
                 <a href="https://play.google.com/store/apps/details?id=com.hikmatkibateinefour.hikmathkibatein_02&pcampaignid=web_share" class="download-btn">
                     <i class="fab fa-google-play"></i>
                     Download
@@ -1190,7 +1190,7 @@
                     <img src="volume3.png" alt="App Logo" style="width:60px; height:60px;">
                 </div>
                 <h3>Volume-03</h3>
-                <p>Access a collection of inspiring Islamic quotes and teachings</p>
+                <p>Get it now</p>
                 <a href="https://play.google.com/store/apps/details?id=com.HIKMATKIBATEIN.hikmatkibaten&pcampaignid=web_share" class="download-btn">
                     <i class="fab fa-google-play"></i>
                     Download
