--- a/index.html
+++ b/index.html
@@ -1350,7 +1350,7 @@
         <div class="physical-book-content">
             <h2>Get Your Physical Copy</h2>
             <p class="highlight-text">If you want a physical copy of the book, contact us!</p>
-            <p class="secondary-text">The physical copy is free of cost and only shipping cost may include</p>
+            <p class="secondary-text">The physical copy is free of cost.</p>
             <a href="mailto:ahmedniyaz967@gmail.com?subject=Requesting%20a%20Physical%20copy%20of%20the%20book" class="email-btn">
                 <i class="fas fa-envelope"></i>
                 Request Physical Copy
